--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "lint-staged": {
     "*.{js}": [
       "prettier --write",
-      "eslint --fix",
+      "npm run lint",
       "git add"
     ],
     "*.{html,css,less,ejs}": [
